--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ngrx/store": "^6.0.1",
     "core-js": "^2.5.4",
     "owl-ng": "^1.0.0-beta.15",
     "rxjs": "^6.0.0",
