--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@ngrx/effects": "^6.0.1",
     "@ngrx/store": "^6.0.1",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "owl-ng": "^1.0.0-beta.15",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.1",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
